--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npx nodemon src/index.js"
   },
   "dependencies": {
+    "amqplib": "^0.10.8",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
